--- a/gtk4/cosmicagenda/prototypes/todoList.ui
+++ b/gtk4/cosmicagenda/prototypes/todoList.ui
@@ -3,6 +3,8 @@
 <interface>
   <requires lib="gtk" version="4.6"/>
   <object class="GtkApplicationWindow">
+    <property name="halign">center</property>
+    <property name="valign">baseline</property>
     <child>
       <object class="GtkListBox" id="listbox">
         <child>
