--- a/proj/viewmd/src/ui/viewmd-window.ui
+++ b/proj/viewmd/src/ui/viewmd-window.ui
@@ -19,12 +19,18 @@
           </object>
         </child>
         <child>
-          <object class="GtkTextView" id="text_view">
-            <property name="margin-bottom">10</property>
-            <property name="margin-end">10</property>
-            <property name="margin-start">10</property>
-            <property name="margin-top">10</property>
-            <property name="vexpand">True</property>
+          <object class="GtkScrolledWindow">
+            <property name="hexpand">TRUE</property>
+            <property name="vexpand">TRUE</property>
+            <child>
+              <object class="GtkTextView" id="text_view">
+                <property name="margin-bottom">10</property>
+                <property name="margin-end">10</property>
+                <property name="margin-start">10</property>
+                <property name="margin-top">10</property>
+                <property name="vexpand">True</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
