--- a/proj/viewmd/prototypes/viewmd.ui
+++ b/proj/viewmd/prototypes/viewmd.ui
@@ -2,24 +2,15 @@
 <!-- Created with Cambalache 0.10.3 -->
 <interface>
   <!-- interface-name viewmd.ui -->
-  <requires lib="gtk" version="4.6"/>
-  <requires lib="libadwaita" version="1.1"/>
-  <object class="AdwApplicationWindow">
+  <requires lib="gtk+" version="3.24"/>
+  <object class="GtkApplicationWindow">
     <child>
       <object class="GtkScrolledWindow">
-        <property name="child">
-          <object class="GtkBox">
-            <child>
-              <object class="GtkTextView" id="text_view">
-                <property name="margin-bottom">10</property>
-                <property name="margin-end">10</property>
-                <property name="margin-start">10</property>
-                <property name="margin-top">10</property>
-                <property name="vexpand">True</property>
-              </object>
-            </child>
+        <child>
+          <object class="GtkTextView" id="text_view">
+            <property name="margin">10</property>
           </object>
-        </property>
+        </child>
       </object>
     </child>
   </object>
