feat: The application now accepts the file to be viewed as a command line argument

--- a/proj/viewmd/src/ui/viewmd-window.ui
+++ b/proj/viewmd/src/ui/viewmd-window.ui
@@ -5,4 +5,22 @@
     <property name="default-height">300</property>
 
   </template>
+
+  <menu id="primary_menu">
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_Preferences</attribute>
+        <attribute name="action">app.preferences</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
+        <attribute name="action">win.show-help-overlay</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_About Cosmicagenda</attribute>
+        <attribute name="action">app.about</attribute>
+      </item>
+    </section>
+  </menu>
+
 </interface>
